--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -23,13 +23,14 @@
             android:id="@+id/backArrow"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_back_arrow"
+            app:srcCompat="@drawable/arrow_back"
             android:contentDescription="Back"
             android:importantForAccessibility="no"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginBottom="16dp"
+            app:tint="@color/gradientMiddle" />
 
         <!-- Judul Daftar Akun -->
         <TextView
@@ -39,7 +40,7 @@
             android:text="Daftar Akun"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:fontFamily="@font/tilt_warp"
+            android:fontFamily="@font/poppins_bold"
             android:textColor="#000000"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
@@ -79,7 +80,7 @@
         android:text="Daftar Akun Nganjuk Abirupa!"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:fontFamily="@font/tilt_warp"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="#000000"
         android:layout_marginBottom="8dp" />
 
@@ -91,7 +92,7 @@
         android:text="Daftar akun Nganjuk Abirupa untuk menikmati semua layanan dan fitur di Nganjuk Abirupa"
         android:textSize="10sp"
         android:textStyle="normal"
-        android:fontFamily="@font/tilt_warp"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="24dp" />
 
@@ -103,7 +104,7 @@
         android:text="Nama Lengkap"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/tilt_warp"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -130,7 +131,7 @@
         android:text="Alamat Email"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/tilt_warp"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -157,7 +158,7 @@
         android:text="No.Telp"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/tilt_warp"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -184,7 +185,7 @@
         android:text="Kata Sandi"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/tilt_warp"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -211,7 +212,7 @@
         android:text="Konfirmasi Kata Sandi"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/tilt_warp"
+        android:fontFamily="@font/poppins_bold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
