--- a/app/src/main/res/drawable/border_kolomkatasandi.xml
+++ b/app/src/main/res/drawable/border_kolomkatasandi.xml
@@ -2,5 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#F0F3F8" />
-    <corners android:topLeftRadius="32dp" android:topRightRadius="32dp" />
+    <stroke
+        android:width="1dp"
+        android:color="#E0E0E0" />
+    <corners android:radius="8dp" />
+
 </shape>
