--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -148,34 +148,22 @@
                     tools:background="@drawable/border_kolomkatasandi"/>
 
                 <!-- Lupa Kata Sandi? -->
-                <TextView
-                    android:id="@+id/tv_forgot_password"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="Lupa kata sandi?"
-                    android:fontFamily="@font/poppins_semibold"
-                    android:textColor="#4DB6AC"
-                    android:textSize="12sp"
-                    app:layout_constraintTop_toBottomOf="@id/et_password"
-                    app:layout_constraintEnd_toEndOf="parent"/>
 
                 <!-- Login Button (Menggunakan MaterialButton) -->
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
                     android:backgroundTint="#32A8A7"
-                    android:text="Login"
                     android:fontFamily="@font/poppins_bold"
+                    android:paddingVertical="12dp"
+                    android:text="Login"
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
-                    android:paddingVertical="12dp"
                     app:cornerRadius="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    tools:layout_editor_absoluteY="368dp" />
 
                 <!-- Registrasi Link -->
                 <TextView
