--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,11 +30,11 @@
         android:layout_marginTop="40dp"
         android:contentDescription="Logo Nganjuk Abirupa"
         android:src="@drawable/logo_nganjuk_abirupa"
-        android:tint="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@android:color/white" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_content_card"
@@ -110,7 +110,7 @@
                     android:paddingEnd="16dp"
                     android:inputType="text"
                     android:hint="Masukkan Nama Pengguna"
-                    android:fontFamily="@font/Poppins_Regular"
+                    android:fontFamily="@font/poppins_regular"
                     android:textSize="14sp"
                     android:layout_marginTop="4dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_username_label"
@@ -140,7 +140,7 @@
                     android:paddingEnd="16dp"
                     android:inputType="textPassword"
                     android:hint="Masukkan Kata Sandi"
-                    android:fontFamily="@font/Poppins_Regular"
+                    android:fontFamily="@font/poppins_regular"
                     android:textSize="14sp"
                     android:layout_marginTop="4dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_password_label"
@@ -161,9 +161,11 @@
                     android:textColor="@android:color/white"
                     android:textSize="18sp"
                     app:cornerRadius="8dp"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/et_password"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:layout_editor_absoluteY="368dp" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="24dp"/>
+
 
                 <!-- Registrasi Link -->
                 <TextView
