--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -51,7 +51,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gap="16dp"
             android:orientation="vertical">
 
             <!-- Card Profil Pengguna -->
@@ -139,13 +138,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:background="@drawable/bg_logout_button"
                 android:gravity="center"
                 android:padding="12dp"
                 android:text="Logout"
                 android:textColor="#FF0000"
                 android:textSize="16sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:background="@drawable/bg_logout"/>
+                />
 
             <TextView
                 android:layout_width="match_parent"
