--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -166,6 +166,14 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginTop="24dp"/>
 
+                <com.google.android.gms.common.SignInButton
+                    android:id="@+id/googleSignInButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintTop_toBottomOf="@id/btn_login"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
                 <!-- Registrasi Link -->
                 <TextView
@@ -173,14 +181,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:text="Belum memiliki akun? registrasi"
                     android:fontFamily="@font/poppins_font_family"
+                    android:text="Belum memiliki akun? registrasi"
                     android:textSize="12sp"
-                    app:layout_constraintTop_toBottomOf="@id/btn_login"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.502"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
-
+                    app:layout_constraintTop_toBottomOf="@id/googleSignInButton" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
