feat: Add initial RegisterActivity class
Adds the `RegisterActivity.java` file with an empty class definition.

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -247,7 +247,7 @@ app:layout_constraintBottom_toTopOf="@id/footer">
             android:id="@+id/tvWisataName3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Taman Rekreasi"
+            android:text="Goa Margo Tresno"
             android:textSize="16sp"
             android:textStyle="bold"
             android:fontFamily="@font/tilt_warp"
@@ -258,7 +258,7 @@ app:layout_constraintBottom_toTopOf="@id/footer">
             android:id="@+id/tvWisataLocation3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Kota Nganjuk"
+            android:text="Desa Sugihwaras, Kec Ngluyu, Kab Nganjuk"
             android:textSize="12sp"
             android:fontFamily="@font/tilt_warp"
             android:textColor="#4E4E4E"
@@ -301,7 +301,7 @@ app:layout_constraintBottom_toTopOf="@id/footer">
             android:id="@+id/tvWisataName4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Museum"
+            android:text="Sri Tanjung Wisata Tirta"
             android:textSize="16sp"
             android:textStyle="bold"
             android:fontFamily="@font/tilt_warp"
@@ -312,7 +312,7 @@ app:layout_constraintBottom_toTopOf="@id/footer">
             android:id="@+id/tvWisataLocation4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Kota Nganjuk"
+            android:text="Desa Tanjungrejo, Kec Loceret, Kab Nganjuk"
             android:textSize="12sp"
             android:fontFamily="@font/tilt_warp"
             android:textColor="#4E4E4E"
@@ -355,7 +355,7 @@ app:layout_constraintBottom_toTopOf="@id/footer">
             android:id="@+id/tvWisataName5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Pantai"
+            android:text="Taman Rekreasi Anjuk Ladang"
             android:textSize="16sp"
             android:textStyle="bold"
             android:fontFamily="@font/tilt_warp"
@@ -366,7 +366,7 @@ app:layout_constraintBottom_toTopOf="@id/footer">
             android:id="@+id/tvWisataLocation5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Kab Nganjuk"
+            android:text="Kel Ploso, Kota Nganjuk, Kab Nganjuk"
             android:textSize="12sp"
             android:fontFamily="@font/tilt_warp"
             android:textColor="#4E4E4E"
