--- a/app/src/main/res/drawable/header_rounded.xml
+++ b/app/src/main/res/drawable/header_rounded.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:startColor="#91CE65"
-        android:centerColor="#2E9FA6"
-        android:endColor="#125C9F"
-        android:angle="270" />
+        android:endColor="#29898E"
+        android:angle="200" />
     <corners
-        android:bottomLeftRadius="24dp"
-        android:bottomRightRadius="24dp" />
+        android:bottomLeftRadius="15dp"
+        android:bottomRightRadius="15dp" />
 </shape>
