--- a/app/src/main/res/drawable/button_outlineselengkapnya.xml
+++ b/app/src/main/res/drawable/button_outlineselengkapnya.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
-    <corners android:radius="20dp" />
-    <stroke android:width="3dp" android:color="#2E9FA6" />
+    android:shape="rectangle">
     <solid android:color="@android:color/transparent" />
-    <padding android:left="16dp" android:right="16dp" android:top="8dp" android:bottom="8dp" />
+    <stroke android:width="1.1dp" android:color="#007B55" />
+    <corners android:radius="20dp" />
 </shape>
