--- a/app/src/main/res/layout/activity_detail_wisata.xml
+++ b/app/src/main/res/layout/activity_detail_wisata.xml
@@ -23,7 +23,7 @@
             android:id="@+id/btnBack"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_back_arrow"
+            android:src="@drawable/arrow_back"
             android:contentDescription="Back"
             android:layout_marginEnd="16dp" />
 
