--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient_background"
+        android:background="@drawable/header_rounded"
         android:paddingTop="24dp"
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
@@ -144,7 +144,7 @@
                 android:textColor="#FF0000"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:background="@drawable/bg_logout"/>
+                android:background="@color/common_google_signin_btn_tint"
                 />
 
             <TextView
