--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -110,7 +110,7 @@
                     android:paddingEnd="16dp"
                     android:inputType="text"
                     android:hint="Masukkan Nama Pengguna"
-                    android:fontFamily="@font/poppins_regular"
+                    android:font="@font/poppins_font_family"
                     android:textSize="14sp"
                     android:layout_marginTop="4dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_username_label"
@@ -140,7 +140,7 @@
                     android:paddingEnd="48dp"
                     android:inputType="textPassword"
                     android:hint="Masukkan Kata Sandi"
-                    android:fontFamily="@font/poppins_regular"
+                    android:font="@font/poppins_font_family"
                     android:textSize="14sp"
                     android:layout_marginTop="4dp"
                     app:layout_constraintTop_toBottomOf="@id/tv_password_label"
