--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -34,7 +34,7 @@
                 android:contentDescription="Logo Nganjuk Abirupa"
                 android:importantForAccessibility="no"
                 android:scaleType="fitStart"
-                android:src="@drawable/logo_nganjuk_abirupa" />
+                android:src="@drawable/logotextputih" />
 
             <TextView
                 android:id="@+id/tvWelcome"
@@ -163,20 +163,19 @@
 
                     <Button
                         android:id="@+id/btnDetail1"
-                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_gravity="end"
                         android:layout_marginEnd="16dp"
-                        android:background="@drawable/btn_selengkapnya"
+                        android:backgroundTint="@color/gradientMiddle"
                         android:fontFamily="@font/poppins_semibold"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
-                        android:stateListAnimator="@null"
+                        app:cornerRadius="8dp"
+
                         android:text="Selengkapnya"
-                        android:textColor="#2E9FA6"
-                        android:textSize="12sp"
-                        tools:ignore="RtlSymmetry" />
+                        android:textColor="#ffffff"
+                        android:textSize="11sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -230,20 +229,20 @@
 
                     <Button
                         android:id="@+id/btnDetail2"
-                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_gravity="end"
                         android:layout_marginEnd="16dp"
-                        android:background="@drawable/btn_selengkapnya"
                         android:fontFamily="@font/poppins_semibold"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
-                        android:stateListAnimator="@null"
                         android:text="Selengkapnya"
-                        android:textColor="#2E9FA6"
-                        android:textSize="12sp"
-                        tools:ignore="RtlSymmetry" />
+                        android:textColor="#ffffff"
+                        android:textSize="11sp"
+                        android:backgroundTint="@color/gradientMiddle"
+                        app:cornerRadius="8dp"
+
+                         />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -297,20 +296,18 @@
 
                     <Button
                         android:id="@+id/btnDetail3"
-                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_gravity="end"
                         android:layout_marginEnd="16dp"
-                        android:background="@drawable/btn_selengkapnya"
                         android:fontFamily="@font/poppins_semibold"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
-                        android:stateListAnimator="@null"
                         android:text="Selengkapnya"
-                        android:textColor="#2E9FA6"
-                        android:textSize="12sp"
-                        tools:ignore="RtlSymmetry" />
+                        android:textColor="#ffffff"
+                        android:textSize="11sp"
+                        android:backgroundTint="@color/gradientMiddle"
+                        app:cornerRadius="8dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -364,20 +361,18 @@
 
                     <Button
                         android:id="@+id/btnDetail4"
-                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_gravity="end"
                         android:layout_marginEnd="16dp"
-                        android:background="@drawable/btn_selengkapnya"
                         android:fontFamily="@font/poppins_semibold"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
-                        android:stateListAnimator="@null"
                         android:text="Selengkapnya"
-                        android:textColor="#2E9FA6"
-                        android:textSize="12sp"
-                        tools:ignore="RtlSymmetry" />
+                        android:textColor="#ffffff"
+                        android:textSize="11sp"
+                        android:backgroundTint="@color/gradientMiddle"
+                        app:cornerRadius="8dp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -431,20 +426,18 @@
 
                     <Button
                         android:id="@+id/btnDetail5"
-                        style="@style/Widget.AppCompat.Button.Borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
                         android:layout_gravity="end"
                         android:layout_marginEnd="16dp"
-                        android:background="@drawable/btn_selengkapnya"
                         android:fontFamily="@font/poppins_semibold"
                         android:paddingStart="16dp"
                         android:paddingEnd="16dp"
-                        android:stateListAnimator="@null"
                         android:text="Selengkapnya"
-                        android:textColor="#2E9FA6"
-                        android:textSize="12sp"
-                        tools:ignore="RtlSymmetry" />
+                        android:textColor="#ffffff"
+                        android:textSize="11sp"
+                        android:backgroundTint="@color/gradientMiddle"
+                        app:cornerRadius="8dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
