--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -104,7 +104,7 @@
         android:text="Nama Lengkap"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -131,7 +131,7 @@
         android:text="Alamat Email"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -158,7 +158,7 @@
         android:text="No.Telp"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -185,7 +185,7 @@
         android:text="Kata Sandi"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -212,7 +212,7 @@
         android:text="Konfirmasi Kata Sandi"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:fontFamily="@font/poppins_bold"
+        android:fontFamily="@font/poppins_semibold"
         android:textColor="#4E4E4E"
         android:layout_marginBottom="4dp" />
 
@@ -235,17 +235,19 @@
     <Button
         android:id="@+id/btnCreateAccount"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:text="Buat Akun"
-        android:textSize="20sp"
-        android:fontFamily="@font/tilt_warp"
-        android:textColor="@android:color/white"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/gradientMiddle"
-        android:layout_marginBottom="16dp"
-        android:elevation="4dp"
-        android:stateListAnimator="@null"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp" />
+        android:fontFamily="@font/poppins_bold"
+        android:paddingVertical="12dp"
+        android:text="Buat Akun"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:cornerRadius="15dp"
+        app:layout_constraintTop_toBottomOf="@id/et_password"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="24dp"/>
+       />
 
 </LinearLayout>
 
