--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -470,7 +470,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_home_dashboard"
+                android:src="@drawable/ic_home_active"
                 android:contentDescription="Home"
                 android:layout_marginBottom="2dp"
                 app:tint="#2E9FA6" />
