--- a/app/src/main/res/layout/activity_riwayat.xml
+++ b/app/src/main/res/layout/activity_riwayat.xml
@@ -172,7 +172,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/ic_history"
+                android:src="@drawable/ic_history_active"
                 android:contentDescription="Riwayat" />
             <TextView
                 android:layout_width="wrap_content"
